ADD: cambios imagenes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">laboratorio3</string>
+
+    <string name="activity1">Pantalla 01</string>
+    <string name="activity2">Pantalla 02</string>
+
+    <string name="button1">Enter</string>
+    <string name="button2">Regresar</string>
+
 </resources>
