--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,13 @@
     <string name="iniciar_sesion">Iniciar sesion</string>
     <string name="editar">Editar</string>
     <string name="eliminar">Eliminar</string>
+    <string name="correo">Correo</string>
+    <string name="contrase_a">Contraseña</string>
+    <string name="repetir_contrase_a">Repetir Contraseña</string>
+    <string name="registrar">Registrar</string>
+    <string name="recuperar_password">Recuperar password</string>
+    <string name="coloca_tu_mail_a_recuperar">Coloca tu mail a recuperar</string>
+    <string name="verificar_mail">Verificar mail</string>
+    <string name="recuperar">Recuperar</string>
+    <string name="correo">Correo</string>
 </resources>
