ADD: recuperar contraseña

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="verificar_mail">Verificar mail</string>
     <string name="recuperar">Recuperar</string>
     <string name="correo">Correo</string>
+    <string name="coloque_mail">Coloque mail</string>
+    <string name="recuperar_contrase_a">Recuperar contraseña</string>
 </resources>
